less: _actually_ link to PCRE2
In 8e6d96af (less: align with MSYS2, 2023-01-26), we tried to align with
MSYS2, and we even changed the `depends` and `makedepends` entries of
the `PKGBUILD` file.

But we forgot to adjust the `./configure` call ;-)

As a result, Git for Windows' i686 version of `less.exe` (which is not
provided by MSYS2 anymore) currently does not even support regular
expressions...

Signed-off-by: Johannes Schindelin <johannes.schindelin@gmx.de>

--- a/less/PKGBUILD
+++ b/less/PKGBUILD
@@ -31,7 +31,7 @@ build() {
       --build=${CHOST} \
       --prefix=/usr \
       --sysconfdir=/etc \
-      --with-regex=pcre
+      --with-regex=pcre2
   make
 }
 
