msys2-runtime: avoid sharing a cygheap between different MSYS2 runtime versions
When calling, say, a Cygwin Bash (or even a regular MSYS2 Bash, or even
a MinGit Bash of a different Git for Windows version), it is possible
that the MSYS2 runtime of the called Bash is incompatible with the MSYS2
runtime of the caller. When that happens, all kinds of chaos can ensue.

One possible symptom is that the MSYS2 runtime aborts with the error
message "cygheap base mismatch detected".

Another possible symptom is that the MSYS2 runtime (or the Cygwin
runtime) exits silently, with exit code 127 (which is misleading as that
exit code is reserved to imply that an executable could not be found).

With this patch, we try harder to prevent such a thing from happening.

This is a companion to https://github.com/git-for-windows/msys2-runtime/pull/48

Signed-off-by: Johannes Schindelin <johannes.schindelin@gmx.de>

--- a/msys2-runtime/PKGBUILD
+++ b/msys2-runtime/PKGBUILD
@@ -86,7 +86,9 @@ source=('msys2-runtime'::git+https://github.com/cygwin/cygwin#tag=cygwin-${pkgve
         0059-Make-paths-WCS-MBS-conversion-explicit.patch
         0060-Use-MB_CUR_MAX-6-by-default.patch
         0061-Change-the-default-base-address-for-x86_64.patch
-        0062-Do-not-try-to-sync-with-Cygwin.patch)
+        0062-Do-not-try-to-sync-with-Cygwin.patch
+        0063-Avoid-sharing-cygheaps-across-Cygwin-versions.patch
+        0064-dumper-avoid-linker-problem-when-libbfd-depends-on-l.patch)
 sha256sums=('SKIP'
             '0113ee0d3bad78a0575b83e321d41d859b99140d9471762c8a82e766cae36c48'
             'ee1c4c5161eb977c48d02678069fb1836ce36a46b626a71b30ae3bc0fabf77c6'
@@ -149,7 +151,9 @@ sha256sums=('SKIP'
             'cba2181936051214a7218ee933cc9f3619e46b500fdaadfa69b7f38eefda3f10'
             '4809e399aead149f5106248196249130537de492d43e4ba95bfeded84305f39b'
             '5188dc6b44c58eb0140c9078f7bbdb999a228755ef449fa055f8c3415ed2baba'
-            '30f5b96b1fb1c22d0dd463d2ebd592d72650b20db4bc5fbf7dd7c2d81f6c29ce')
+            '30f5b96b1fb1c22d0dd463d2ebd592d72650b20db4bc5fbf7dd7c2d81f6c29ce'
+            '9559bbb33faf6773cd6439be05962a116184b945b909ba49049db3b7c3761a11'
+            'cd576bc86766e5df42af3ac5594073859e562e24ef01e7ab21f0d38ef4d87834')
 
 # Helper macro to help make tasks easier #
 del_file_exists() {
@@ -238,6 +242,8 @@ prepare() {
   git am --committer-date-is-author-date --ignore-space-change "${srcdir}"/0060-Use-MB_CUR_MAX-6-by-default.patch
   git am --committer-date-is-author-date --ignore-space-change "${srcdir}"/0061-Change-the-default-base-address-for-x86_64.patch
   git am --committer-date-is-author-date --ignore-space-change "${srcdir}"/0062-Do-not-try-to-sync-with-Cygwin.patch
+  git am --committer-date-is-author-date --ignore-space-change "${srcdir}"/0063-Avoid-sharing-cygheaps-across-Cygwin-versions.patch
+  git am --committer-date-is-author-date --ignore-space-change "${srcdir}"/0064-dumper-avoid-linker-problem-when-libbfd-depends-on-l.patch
 }
 
 build() {
