msys2-runtime: fetch the base branch from GitHub
Seems that sourceware currently has trouble:

  Cloning into bare repository '/d/a/MSYS2-packages/MSYS2-packages/msys2-runtime/msys2-runtime'...
  fatal: unable to connect to sourceware.org:
  sourceware.org[0: 8.43.85.97]: errno=Connection timed out
  sourceware.org[1: 2620:52:3:1:0:246e:9693:128c]: errno=Network is unreachable

Signed-off-by: Johannes Schindelin <johannes.schindelin@gmx.de>

--- a/msys2-runtime/PKGBUILD
+++ b/msys2-runtime/PKGBUILD
@@ -24,7 +24,7 @@ makedepends=('cocom'
              'libiconv-devel'
              'diffutils')
 # options=('debug' '!strip')
-source=('msys2-runtime'::git://sourceware.org/git/newlib-cygwin.git#tag=cygwin-${pkgver//./_}-release
+source=('msys2-runtime'::git+https://github.com/cygwin/cygwin#tag=cygwin-${pkgver//./_}-release
         0001-Add-MSYS2-triplet.patch
         0002-Fix-msys-library-name-in-import-libraries.patch
         0003-Rename-dll-from-cygwin-to-msys.patch
