--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,6 +22,7 @@ jobs:
         env:
           MSYSTEM: MSYS
           MAKEFLAGS: -j5
+          MSYS2_PATH_TYPE: minimal
       - name: "Upload binaries"
         uses: actions/upload-artifact@v3
         with:
