--- a/openssl/PKGBUILD
+++ b/openssl/PKGBUILD
@@ -1,7 +1,7 @@
 # Maintainer: Alexey Pavlov <alexpux@gmail.com>
 
 pkgname=('openssl' 'libopenssl' 'openssl-devel')
-_ver=1.1.1s
+_ver=1.1.1t
 # use a pacman compatible version scheme
 pkgver=${_ver/[a-z]/.${_ver//[0-9.]/}}
 pkgrel=1
@@ -18,7 +18,7 @@ source=("https://www.openssl.org/source/${pkgname}-${_ver}.tar.gz"{,.asc}
         '0002-Support-MSYS2.patch'
         '0003-tls13secretstest-work-around-multiple-definition-of.patch'
         '0004-Override-engines-directory.patch')
-sha256sums=('c5ac01e760ee6ff0dab61d6b2bbd30146724d063eb322180c6f18a6f74e4b6aa'
+sha256sums=('8dee9b24bdb1dcbf0c3d1e9b02fb8f6bf22165e807f45adeb7c9677536859d3b'
             'SKIP'
             '35f5508bc3e651bb2ef1bf9f4e052f531aeaefbbdeff95b9746fff71137fff31'
             '0f6d46bb1025edd71d518e48fc640f88521b715bcfce2fd2c2a0266dfff4efd6'
