--- a/msys2-runtime/PKGBUILD
+++ b/msys2-runtime/PKGBUILD
@@ -25,6 +25,7 @@ makedepends=('cocom'
              'diffutils')
 # options=('debug' '!strip')
 source=('msys2-runtime'::git+https://github.com/cygwin/cygwin#tag=cygwin-${pkgver//./_}-release
+        msys2-runtime.commit
         0001-Add-MSYS2-triplet.patch
         0002-Fix-msys-library-name-in-import-libraries.patch
         0003-Rename-dll-from-cygwin-to-msys.patch
@@ -87,6 +88,7 @@ source=('msys2-runtime'::git+https://github.com/cygwin/cygwin#tag=cygwin-${pkgve
         0060-dumper-avoid-linker-problem-when-libbfd-depends-on-l.patch
         0061-Cygwin-console-Fix-hangup-of-less-on-quit-after-the-.patch)
 sha256sums=('SKIP'
+            '0935600af15cfcbe4265679b74e2cada9a4b117137e3a024620341875e254544'
             'c375315e58181ee5589b7966101aa095de3f864a579c3c3f0f0683595d4e428d'
             '01ea2b131cf5a3b27fdbc458019eac14e45a36782ce3ce33e62328eefcd2d02e'
             '475ddea4d86605ab097f98ec764951a9d647ea3100dea0e1620f57044ea4a114'
@@ -257,6 +259,7 @@ build() {
   (cd "${srcdir}/msys2-runtime/winsup" && ./autogen.sh)
 
   "${srcdir}"/msys2-runtime/configure \
+    --with-msys2-runtime-commit="$(cat "${srcdir}/msys2-runtime.commit")" \
     --prefix=/usr \
     --build=${CHOST} \
     --sysconfdir=/etc \
