--- a/libgpg-error/PKGBUILD
+++ b/libgpg-error/PKGBUILD
@@ -11,12 +11,12 @@ license=('LGPL')
 depends=('sh' 'libiconv' 'libintl')
 makedepends=('libiconv-devel' 'gettext-devel')
 source=(https://gnupg.org/ftp/gcrypt/libgpg-error/${pkgname}-${pkgver}.tar.bz2{,.sig}
-        libgpg-error-1.16-msys2.patch
-        gpg-error-static-linking.patch)
+        0001-libgpg-error-1.16-msys2.patch
+        0002-gpg-error-static-linking.patch)
 sha256sums=('fc07e70f6c615f8c4f590a8e37a9b8dd2e2ca1e9408f8e60459c67452b925e23'
             'SKIP'
-            '9f24d6b26a9da60b14dba9ce8bb55110609ab5496ed969adfb07464c1393d678'
-            '9780e3e397b983ef52d5dae22d54c4453a47bddf04eafa2f874c75038e3485eb')
+            '8dec30474cea126e47cb1a7bb79673dc35a82c3c71cefb53ba97c8ed149f5a25'
+            'c13ec823212564a4e1faebb0189f15755bea062fd16d35b644165b5e79c38dd1')
 #These might be signed by any of these keys https://gnupg.org/signature_key.html
 validpgpkeys=('D8692123C4065DEA5E0F3AB5249B39D24F25E3B6'
               '031EC2536E580D8EA286A9F22071B08A33BD3F06'
@@ -27,8 +27,8 @@ options=(!makeflags)
 prepare() {
   cd "${srcdir}/${pkgname}-${pkgver}"
 
-  patch -p1 -i ${srcdir}/libgpg-error-1.16-msys2.patch
-  patch -p1 -i ${srcdir}/gpg-error-static-linking.patch
+  patch -p1 -i ${srcdir}/0001-libgpg-error-1.16-msys2.patch
+  patch -p1 -i ${srcdir}/0002-gpg-error-static-linking.patch
   autoreconf -fi
 }
 
